tests/toylang/neg/001503_mutation.toylang
program a = { var a program : bool; } .
